--- a/render.yaml
+++ b/render.yaml
@@ -5,7 +5,7 @@ services:
     env: python
     buildCommand: pip install -U -r requirements.txt
     startCommand: python3 server.py & python3 -m Zaid
-    repo: https://github.com/MrHacker5575/CoDeX-U-Bot2.5     
+    repo: https://telegra.ph/file/1551756fb77b7777642dd.mp4     
     branch: master
     envVars:
       - key: SUDO_USERS 
