--- a/app.json
+++ b/app.json
@@ -1,9 +1,9 @@
 {
-    "name": "☆ 🇨Ⓞ𝗗𝜩🇽 ☆",
-    "logo": "https://graph.org/file/fd6932a2f2c9ff0ac02a9.jpg",
+    "name": "☆  𐎓⃝🌺🇲𝗼𝗻𝘀𝘁𝗲𝗿❤‍🔥⃟⃚⃐ 🌿 ☆",
+    "logo": "https://graph.org/file/a5b4f18770caacd1cdc7c.jpg",
     "description": "The first Telegram Userbot with multi Clients for Spamming or Mass.",
     "keywords": ["pyrogram", "userbot"],
-    "repository": "https://github.com/MrHacker5575/CoDeX-U-Bot2.5",
+    "repository": "https://github.com/SaiDictator/killer-Ub-Bot2.5",
   "stack": "container",
     "env": {
         "STRING_SESSION1": {
