--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
   "stack": "container",
     "env": {
         "STRING_SESSION1": {
-            "description": "fill with the telethon session string",
+            "description": "fill with the program session string",
             "required": true
         },
         "MONGO_URL": {
